titlebar buttons collaps fix

--- a/app/assets/stylesheets/face_of_active_admin/structure/_title_bar.scss
+++ b/app/assets/stylesheets/face_of_active_admin/structure/_title_bar.scss
@@ -27,6 +27,7 @@
 
   #titlebar_right {
     text-align: right;
+    min-width: 190px;
   }
 
   h2 {
